@@ -1,3 +1,0 @@
-from Products.PloneTestCase.layer import ZCML
-
-PloneSession = ZCML
